Work on indexing by URI (IndexSource).